[NAE-1645] - Set data actions refactor
- add QueryDSL annotation to not include type of fields in generated Q classes due to errors
- exclude DataType from QueryDSL due to errors during plugin execution
- replace all occurrences of FieldType by DataType
- remove deprecated properties from localised classes
- refactore FileFieldValue methods for getting file path and preview path using FileStorageConfiguration